--- a/poweroptimus-website-nextjs/package.json
+++ b/poweroptimus-website-nextjs/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18next": "^24.2.0",
     "next": "^15.2.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
