--- a/poweroptimus-website-nextjs/package.json
+++ b/poweroptimus-website-nextjs/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "i18next": "^24.2.0",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^2.2.0",
     "next": "^15.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
