--- a/poweroptimus-website-nextjs/src/app/app-config.json
+++ b/poweroptimus-website-nextjs/src/app/app-config.json
@@ -2,9 +2,7 @@
     "features": {
         "localization": {
             "locales": {
-                "en": "Eng",
-                "jp": "日本語",
-                "de": "Deu"
+                "en": "Eng"
             }
         }
     },
